Refactor url to always contain customerId
